--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           </nav>
         </div>
       </div>
+
+      <div class="backgroung-header">
+        <img src="file:///Users/mac/Downloads/img/hero-bg.jpg" alt="">
+      </div>
     </header>
 
   </body>
