--- a/index.html
+++ b/index.html
@@ -26,18 +26,23 @@
               <li><a href="#">CITIES</a></li>
               <li><a href="#">CAREERS</a></li>
               <li><a href="#">SHOP</a></li>
-              <li><a href="#">ENG</a></li>
-              <li><a href="#">ITA</a></li>
+              <li id="border-nav-left"><a href="#">ENG</a></li>
+              <li id="border-nav-left"><a href="#">ITA</a></li>
               <li><a href="#">ES</a></li>
             </ul>
           </nav>
         </div>
       </div>
 
-      <div class="backgroung-header">
-        <img src="file:///Users/mac/Downloads/img/hero-bg.jpg" alt="">
+      <div class="background-header">
+        <div class="text">
+          <h1>Shared Mobility of Tomorrow</h1>
+          <p>Bringing the future of shared mobility to the streets of the world</p>
+          <img id="text-image" src="file:///Users/mac/Downloads/img/app-store.svg" alt="">
+          <img id="text-image"src="file:///Users/mac/Downloads/img/google-play.svg" alt="">
+        </div>
       </div>
     </header>
 
   </body>
-</html>
+  </html>
